@@ -1,3 +1,8 @@
+2013-05-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* src/save_kb.c (save_kb_new, save_kb_load_kb, save_kb_write): Remove
+	handling of username, because "kbs" is not user-specific anymore.
+
 2013-05-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Removing "users" directory. Any remaining file-based data
